--- a/Demo_Objective-C_Storyboard/LGSideMenuControllerDemo/Main.storyboard
+++ b/Demo_Objective-C_Storyboard/LGSideMenuControllerDemo/Main.storyboard
@@ -174,7 +174,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageRoot.png" translatesAutoresizingMaskIntoConstraints="NO" id="GoA-rv-Fkj">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z2q-EA-ea6">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
@@ -197,10 +197,10 @@
                         <constraints>
                             <constraint firstItem="GoA-rv-Fkj" firstAttribute="leading" secondItem="nuG-fh-uKV" secondAttribute="leading" id="0Hi-Tq-rfz"/>
                             <constraint firstItem="Ilz-ms-4rO" firstAttribute="top" secondItem="Z2q-EA-ea6" secondAttribute="bottom" id="1aL-jB-bGt"/>
-                            <constraint firstItem="GoA-rv-Fkj" firstAttribute="top" secondItem="Cs2-ar-3yI" secondAttribute="bottom" constant="-44" id="H7z-t0-fyz"/>
+                            <constraint firstItem="GoA-rv-Fkj" firstAttribute="top" secondItem="nuG-fh-uKV" secondAttribute="top" id="Ojd-G2-dRN"/>
                             <constraint firstAttribute="trailing" secondItem="GoA-rv-Fkj" secondAttribute="trailing" id="WS9-Vd-ysY"/>
+                            <constraint firstAttribute="bottom" secondItem="GoA-rv-Fkj" secondAttribute="bottom" id="dfv-4R-zh6"/>
                             <constraint firstItem="Z2q-EA-ea6" firstAttribute="leading" secondItem="nuG-fh-uKV" secondAttribute="leading" id="fHF-rh-Hn3"/>
-                            <constraint firstItem="Ilz-ms-4rO" firstAttribute="top" secondItem="GoA-rv-Fkj" secondAttribute="bottom" id="hFF-Zm-Fqm"/>
                             <constraint firstAttribute="trailing" secondItem="Z2q-EA-ea6" secondAttribute="trailing" id="oYa-P0-reY"/>
                         </constraints>
                     </view>
@@ -235,11 +235,11 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O7m-o5-I1g" id="UeH-bt-D0C">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="You can delete me by swipe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="A7H-wb-9GX">
-                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
