--- a/Demo_Swift_Storyboard/LGSideMenuControllerDemo/Main.storyboard
+++ b/Demo_Swift_Storyboard/LGSideMenuControllerDemo/Main.storyboard
@@ -60,7 +60,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qPL-Yf-bvg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-290" y="1781"/>
+            <point key="canvasLocation" x="-558" y="1781"/>
         </scene>
         <!--Left View Controller-->
         <scene sceneID="fd9-99-CZB">
@@ -108,7 +108,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gn2-oT-HTE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1147" y="1083"/>
+            <point key="canvasLocation" x="-1109" y="990"/>
         </scene>
         <!--LGSideMenuController-->
         <scene sceneID="OYz-cL-FCb">
@@ -123,7 +123,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageRoot.png" translatesAutoresizingMaskIntoConstraints="NO" id="q0I-ee-Mqw">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EaT-dr-Flg">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
@@ -144,12 +144,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="q0I-ee-Mqw" firstAttribute="top" secondItem="jpJ-Ri-8Y5" secondAttribute="bottom" constant="-44" id="2wJ-PA-LPS"/>
                             <constraint firstItem="g4B-HY-N21" firstAttribute="top" secondItem="EaT-dr-Flg" secondAttribute="bottom" id="4RF-ke-ze0"/>
-                            <constraint firstItem="g4B-HY-N21" firstAttribute="top" secondItem="q0I-ee-Mqw" secondAttribute="bottom" id="K1x-HT-78q"/>
                             <constraint firstItem="EaT-dr-Flg" firstAttribute="leading" secondItem="B2g-z4-HGG" secondAttribute="leading" id="QeX-Aq-amP"/>
                             <constraint firstItem="q0I-ee-Mqw" firstAttribute="leading" secondItem="B2g-z4-HGG" secondAttribute="leading" id="ZjQ-Io-DYa"/>
                             <constraint firstAttribute="trailing" secondItem="EaT-dr-Flg" secondAttribute="trailing" id="aDS-0V-KBb"/>
+                            <constraint firstAttribute="bottom" secondItem="q0I-ee-Mqw" secondAttribute="bottom" id="oAF-Ff-Zn9"/>
+                            <constraint firstItem="q0I-ee-Mqw" firstAttribute="top" secondItem="B2g-z4-HGG" secondAttribute="top" id="tUh-EQ-tfb"/>
                             <constraint firstAttribute="trailing" secondItem="q0I-ee-Mqw" secondAttribute="trailing" id="wKB-iT-Kr4"/>
                         </constraints>
                     </view>
@@ -169,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3kv-zL-edg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="510" y="1781"/>
+            <point key="canvasLocation" x="-64" y="1781"/>
         </scene>
         <!--Right View Controller-->
         <scene sceneID="qMB-jL-0u9">
@@ -217,7 +217,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Ve-Ed-cMI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-827" y="1083"/>
+            <point key="canvasLocation" x="-909" y="990"/>
         </scene>
         <!--LGSideMenuController-->
         <scene sceneID="mWK-bL-hRL">
@@ -262,7 +262,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1x1-pp-f3v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="510" y="1083"/>
+            <point key="canvasLocation" x="-64" y="990"/>
         </scene>
     </scenes>
     <resources>
